feature: tree-view for project selection

--- a/src/i18n/locales/cz.json
+++ b/src/i18n/locales/cz.json
@@ -1,5 +1,5 @@
 {
-  "appName": "Lingo Nabanga",
+  "appName": "AdVerbum",
   "mainMenu": {
     "aboutAppTitle": "O @:appName",
     "aboutAppText": "About @:appName",
