feature: %lang% placeholder and audio fix

--- a/src/i18n/locales/cz.json
+++ b/src/i18n/locales/cz.json
@@ -1,5 +1,5 @@
 {
-  "appName": "AdVerbum",
+  "appName": "Ieni",
   "mainMenu": {
     "aboutAppTitle": "O @:appName",
     "aboutAppText": "About @:appName",
