--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "appName": "AdVerbum",
+  "appName": "Ieni",
   "mainMenu": {
     "learning": "Learning tools",
     "aboutDictionary": "About this dictionary",
