--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1,5 +1,5 @@
 {
-  "appName": "AdVerbum",
+  "appName": "Ieni",
   "mainMenu": {
     "aboutAppTitle": "À propos de @:appName",
     "aboutAppText": "About @:appName",
