fix: default to about dictionary view

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -4,7 +4,7 @@
     "learning": "Learning tools",
     "aboutDictionary": "About this dictionary",
     "aboutAppTitle": "About @:appName",
-    "aboutAppText": "This app has been originally created for *Plants mo Pipol blong Vanuatu* research project ...",
+    "aboutAppText": "This app was originally created for the *Plants mo Pipol blong Vanuatu* research project and is developed and maintained by **Dominik M. Ramík**. Learn more, get updates, and contact the author at [dominicweb.eu](https://dominicweb.eu).",
     "settings": "Settings"
   },
   "manage": {
